Woohoo, working file reads!